--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ nav {
 .cta{
 	padding: 50px 0px 0px 0px;
 }
+
 .cta-select{
 	border: 2px solid #c36cbb ;
 	background: transparent;
@@ -118,16 +119,117 @@ nav {
 	font-size: 16px;
 	border: none;
 	color: white;
-	
+	margin: 30px 0px 0px 30px;
 
 }
 
 
 .cover {
 	flex: 1;
+	display: flex;
+	justify-content: center;
+	
 }
 
 .cover img {
+	
 	height: 60vh;
 	justify-items: flex-end;
+	filter: drop-shadow(0px 5px 3px black);
+	animation: drop 1.5s ease;
 }
+
+
+.big-circle {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	z-index: -1;
+	opacity: 0.5;
+	height: 80%;
+
+}
+
+
+.medium-circle {
+	position: absolute;
+	top: 30%;
+	right: 30%;
+	z-index: -1;
+	height: 60%;
+	opacity: 0.4;
+
+}
+
+.small-circle{
+	position: absolute;
+	bottom: 0%;
+	left: 20%;
+	z-index: -1;
+
+}
+
+.laptop-select {
+	display: flex;
+	width: 15%;
+	justify-content: space-around;
+	position: absolute;
+	right: 20%;
+
+}
+
+
+@keyframes drop {
+	0%{
+		opacity: 0;
+		transform: translateY(-80px);
+	}
+
+	100%{
+		opacity: 1;
+		transform: 0;
+	}
+}
+
+
+@media screen and (max-width:  1024px){
+	.presentation{
+		flex-direction: column;
+	}
+
+	.introduction{
+		margin-top: 5vh;
+		text-align: center;
+	}
+	.intro-text h1{
+		font-size: 30px;
+	}
+
+	.intro-text p {
+		font-size: 18px;
+	}
+
+	.cta{
+		padding: 10px 0px 0px 0px;
+	}
+
+	.laptop-select {
+		bottom: 5%;
+		right: 50%;
+		width: 50%;
+		transform: translate(50%, 5%);
+	}
+
+	.cover img{
+		height: 50%;
+
+	}
+
+	.small-circle,
+	 .medium-circle,
+	  .big-circle {
+		opacity: 0.2;
+	}
+}
+
+@media screen and (max-width: 360px)
